completed capstone book my show

--- a/src/client/src/styles/App.css
+++ b/src/client/src/styles/App.css
@@ -1,10 +1,13 @@
+*{
+    box-sizing: border-box;
+}
 .movie-column, .seat-column, .slot-column {
     display: inline-block;
     margin: 5px;
     color: rgb(0, 0, 0);
     border: 1px rgb(0, 0, 0) ridge;
     padding: 10px 15px;
-    line-height: 1px;
+    line-height: 1;
     border-radius: 5px;
     /* box-shadow: 0 0 5px 5px; */
 }
@@ -36,6 +39,7 @@
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#2cd158", endColorstr="#2c6ce0", GradientType=1);
     padding: 5px 15px;
     font-weight: 500;
+    border: none;
 }
 
 .movie-column-selected, .seat-column-selected, .slot-column-selected {
@@ -47,6 +51,7 @@ input {
     width: 50px;
     border-color: rgb(196, 196, 196);
     border-width: 1px;
+    border-style: solid;
 }
 
 .last-order {
@@ -54,6 +59,22 @@ input {
     border: 1px black ridge;
     padding: 10px;
     margin-bottom: 10px;
-    margin-right: 10px;
-    ;
+    margin-left: 24px;
+    min-width: 330px;
+}
+/* my css */
+.main {
+    display: flex;
+    padding: 30px;
+}
+
+.left {
+    flex-grow: 1;
+}
+h2.main-title {
+    padding: 30px;
+    padding-bottom: 0;
+}
+.err {
+    color: red;
 }
